[package]
name = "id3-image"
version = "0.1.3"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2018"
description = "A tool to embed images into mp3 files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndrewRadev/id3-image"
documentation = "https://docs.rs/id3-image/latest/id3_image"
keywords = [ "id3", "mp3", "images" ]
categories = [ "command-line-utilities", "filesystem", "multimedia" ]

[badges]
travis-ci = { repository = "AndrewRadev/id3-image" }

[dependencies]
id3 = "0.5"
image = "0.23"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = "3.1"
