[package]
name = "id3-image"
version = "0.3.1"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2021"
description = "A tool to embed images into mp3 files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndrewRadev/id3-image"
documentation = "https://docs.rs/id3-image/latest/id3_image"
keywords = [ "id3", "mp3", "images" ]
categories = [ "command-line-utilities", "filesystem", "multimedia" ]

[badges]
circle-ci = { repository = "AndrewRadev/id3-image" }

[dependencies]
anyhow = "1.0.57"
id3 = "1.1.2"
image = "0.23.13"
structopt = { version = "0.3.26", default-features = false }

[dev-dependencies]
tempfile = "3.3.0"
